environments/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      serviceAccount: nginx-sa
      serviceAccountName: nginx-sa
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
